Fri Sep 21 16:47:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html: Suggest using Python version 2.4 or
	  later if using mod-python: apparently, even with the
	  "PythonInterpreter main_interpreter" workaround, mod-python gets
	  into a deadlock with Xapian with Python 2.3.

Wed Sep 19 16:11:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html: Add documentation for python
	  implementations of ValueRangeProcessors.

Wed Sep 19 16:06:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py,python/util.i: Implement conversion of the
	  return value from ValueRangeProcessor subclasses implemented in
	  Python from a tuple, so that such subclasses can change the
	  values of begin and end.

Wed Sep 19 14:11:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Add director directive for Xapian::ValueRangeProcessor,
	  to allow implementations in the target language, where directors
	  are supported.
	* python/generate-python-exceptions.in: Copy workaround for thread
	  handling stuff for ValueRangeProcessor::operator().
	* python/pythontest.py: Add test_queryparser_custom_vrp() for
	  ValueRangeProcessors implemented in Python, and clean up some of
	  the other tests slightly.

Wed Sep 19 00:46:31 BST 2007  Olly Betts <olly@survex.com>

	* python/util.i: Fix typo in comment.

Tue Sep 18 19:59:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html: Document the return value of
	  ValueRangeProcessor.__call__()

Tue Sep 18 19:42:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/util.i,python/extra.i: Add support for
	  ValueRangeProcessor.operator(); this is messy because we need to
	  make special argout typemaps, and the parameter names (begin and
	  end) are used for arguments of type "std::string&" elsewhere -
	  therefore, we have to extend ValueRangeProcessor with a new