@@ -1,3 +1,11 @@
+Wed Sep 26 11:50:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/testsuite.py: Add a "runonly" parameter to runtests(),
+	  allowing the set of tests to run to be specified.
+	* python/pythontest.py: Use any commandline arguments to populate
+	  the "runonly" parameter, allowing the tests to run to be
+	  specified on the command line.
+
 Fri Sep 21 16:47:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* python/docs/bindings.html: Suggest using Python version 2.4 or
